ui: Ensure spell summation is visible over top
of selected cards

--- a/public/index.css
+++ b/public/index.css
@@ -80,7 +80,7 @@ body {
 }
 #spell-pool {
   position: fixed;
-  bottom: 130px;
+  bottom: 220px;
   left: 0;
   right: 0;
   text-align: center;
